--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
   <img src="http://38.media.tumblr.com/70ace162d8f0654f3239aa7447a21870/tumblr_muvabkXjsz1qz6h81o1_1280.jpg" alt="Avi">
   <img src="http://photos4.meetupstatic.com/photos/member/5/0/5/c/member_155060572.jpeg" alt="Spencer">
 
+  <p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
+
 </body>
 </html>
