--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li>Archive Steph's Gif collection</li>
     <li class="completed">Take out trash</li>
   </ul>
-
+  <p>jkkj</p>
   <h2>Issue Bot Camera Capture Archive</h2>
 
   <img src="http://pictures.wayn.com/photos/180c/034546087_237927497.jpg" alt="Adam">
