Added the notes to otherwise errorless page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--Is this lab a joke or typo!?-->
+<!--I took the HTML code below and pasted it into
+    this website:
+    https://validator.w3.org/nu/#textarea
+    ...and there were no errors. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
