--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1 id="title">CSS ISSUE BOT 9000 - Checks for Issues</h1>
+  <h1>CSS ISSUE BOT 9000 - Checks for Issues</h1>
 
   <h2>Issue Bot's Daily Diary</h2>
 
@@ -22,7 +22,7 @@
   <ul id="tasks">
     <li class="completed">Debug Ruby Labs</li>
     <li class="completed">Massage Joe's Back</li>
-    <li>Archive Steph's Gif collection</li>
+    <li class="completed">Archive Steph's Gif collection</li>
     <li class="completed">Take out trash</li>
   </ul>
 
