--- a/index.html
+++ b/index.html
@@ -33,4 +33,12 @@
   <img src="http://photos4.meetupstatic.com/photos/member/5/0/5/c/member_155060572.jpeg" alt="Spencer">
 
 </body>
+<footer><p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
+    </footer>
 </html>
